# lib/db/src/schema/index.ts
@@ -6,3 +6,4 @@ export * from "./messages";
 export * from "./inventory";
 export * from "./feedback";
 export * from "./listings";
+export * from "./commissions";
